Do not emit --add-modules ALL-MODULE-PATH when the module path is empty
The Java step added --add-modules ALL-MODULE-PATH whenever the module graph
was not self-contained, including classpath-only runs where the module path
is empty and the flag references nothing. Guard on a non-empty module path,
matching the behavior jpx already has.